# Rust-Web

./: Cargo.toml
db/: Cargo.toml  db.sql
db/src/: main.rs
http/src/: httprequest.rs  httpresponse.rs
httpserver/: Cargo.toml
httpserver/data/: orders.json
httpserver/public/: 404.html  health.html  index.html  styles.css
httpserver/src/: handler.rs  router.rs  server.rs
tcpclient/src/: main.rs
tcpserver/src/: main.rs
webservice/: Cargo.toml
webservice/src/: db_access.rs  errors.rs  handlers.rs  routers.rs  state.rs
webservice/src/dbaccess/: course.rs  mod.rs  teacher.rs
webservice/src/handlers/: course.rs  general.rs  teacher.rs
webservice/src/models/: course.rs  teacher.rs
